# MijnBussie

./: .env.example  .gitignore  .gitmodules  Cargo.toml  Dockerfile  README.md  config.toml  docker-compose.yml
assets/: logo.xcf
auth/: Dockerfile
docker_cargo/: config.toml
entity/src/: general_properties_db.rs  kuma_properties.rs  user_account.rs  user_data.rs  user_properties.rs
migration/: Cargo.toml
migration/src/: lib.rs  m20251006_143409_general_settings.rs  m20251008_194017_user_settings.rs  m20251008_194417_user_data.rs  m20251110_155639_user_account.rs  m20251115_110830_name.rs  m20251121_111842_account_deletion.rs  m20260123_131720_system_restore.rs
scripts/: build.sh  find_user.py
src/: api.rs  email.rs  errors.rs  execution.rs  gebroken_shifts.rs  health.rs  ical.rs  kuma.rs  main.rs  parsing.rs  timer.rs  variables.rs  watchdog.rs  webcom.rs  webdriver.rs
src/api/: auth.rs  mod.rs  route.rs
src/database/: mod.rs  secret.rs  variables.rs
src/execution/: timer.rs  watchdog.rs
src/webcom/: deletion.rs  email.rs  gebroken_shifts.rs  ical.rs  mod.rs  parsing.rs  webcom.rs  webdriver.rs
templates/: email_base.html  failed_signin.html  inform_account_deletion.html  kuma_offline.html  kuma_online.html  new_password_failed.html  onboarding_base.html  potential_account_deletion.html  signin_succesful.html
