[package]
name = "mijn_bussie"
version = "0.3.0"
edition = "2024"

[workspace]
members = [".", "entity", "migration"]

[dependencies]
entity = { path = "entity" }
serde = { version = "1.0.219", features = ["derive"] }
reqwest = "0.12.24"
dotenvy = "0.15.7"
thirtyfour = "0.36.1"
tokio = { version = "1.48.0", features = ["full"] }
time = { version = "0.3.44", features = [
    "parsing",
    "macros",
    "formatting",
    "serde",
] }
migration = { path = "migration" }
kuma-client = "1.0.0"
url = "2.5.7"
icalendar = { version = "0.17.5", features = [
    "serde_json",
    "serde",
    "default",
] }
chrono = "0.4.42"
serde_json = "1.0.145"
async-recursion = "1.1.1"
lettre = "0.11.19"
thiserror = "2.0.17"
strfmt = "0.2.5"
rand = "0.9.2"
serde_with = "3.15.1"
sea-orm = { version = "2.0.0-rc.14", features = [
    "runtime-tokio",
    "sqlx-postgres",
] }
simplestcrypt = "0.2.0"
base64 = "0.22.1"
axum = { version = "0.8.6", features = ["json", "query", "macros"] }
default = "0.1.2"
strum = "0.27"
strum_macros = "0.27"
secrecy = { version = "0.10.3", features = ["serde"] }
tracing-appender = "0.2.3"
tracing-subscriber = "0.3.20"
tracing = "0.1.41"
tracing-futures = { version = "0.2.5", features = ["tokio"] }
tower = "0.5.2"
