[package]
name = "mijn_bussie"
version = "0.3.0"
edition = "2024"

[workspace]
members = [".", "entity", "migration"]

[dependencies]
entity = { path = "entity" }
serde = { version = "1.0.219", features = ["derive"] }
reqwest = "0.13.1"
dotenvy = "0.15.7"
thirtyfour = "0.36.1"
tokio = { version = "1.49.0", features = ["full"] }
time = { version = "0.3.45", features = [
    "parsing",
    "macros",
    "formatting",
    "serde",
] }
migration = { path = "migration" }
kuma-client = { branch = "master", git = "https://github.com/youpie/AutoKuma.git" }
url = "2.5.8"
icalendar = { version = "0.17.6", features = [
    "serde_json",
    "serde",
    "default",
] }
chrono = "0.4.43"
serde_json = "1.0.149"
async-recursion = "1.1.1"
lettre = "0.11.19"
thiserror = "2.0.18"
strfmt = "0.2.5"
rand = "0.9.2"
serde_with = "3.16.1"
sea-orm = { version = "2.0.0-rc.14", features = [
    "runtime-tokio",
    "sqlx-postgres",
] }
simplestcrypt = "0.2.0"
base64 = "0.22.1"
axum = { version = "0.8.8", features = ["json", "query", "macros"] }
strum = "0.27"
strum_macros = "0.27"
secrecy = { version = "0.10.3", features = ["serde"] }
tracing-appender = "0.2.4"
tracing-subscriber = "0.3.22"
tracing = "0.1.44"
tracing-futures = { version = "0.2.5", features = ["tokio"] }
tower = "0.5.3"
axum-server = { version = "0.8.0", features = ["rustls", "tls-rustls"] }
rustls = { version = "0.23.35", features = ["ring"] }

# hyper = "=1.7.0"
